--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "robertotru/to-inline-style-email-bundle",
-    "version": "1.0.0-dev",
-    "time": "2013-01-16",    
+    "version": "1.0.0",
+    "time": "2014-11-06",
     "type": "symfony-bundle",
     "description": "A Symfony2 bundle for using the CssToInlineStyles translator by tijsverkoyen",
     "keywords": ["css", "inline", "style", "email", "symfony", "bundle"],
@@ -15,12 +15,19 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+          "type": "vcs",
+          "url": "https://github.com/mente/CssToInlineStyles"
+        }
+    ],
     "require": {
         "php": ">=5.3.3",
-        "tijsverkoyen/css-to-inline-styles": "~1.2"
+        "tijsverkoyen/css-to-inline-styles": "dev-css-processing-fix"
     },
     "require-dev": {
-        "symfony/framework-bundle": ">=2.1,<2.2-dev"
+        "symfony/framework-bundle": ">=2.4,<2.6-dev",
+        "twig/twig": "~1.16"
     },
     "autoload": {
         "psr-0": { "RobertoTru\\ToInlineStyleEmailBundle": "" }
